Establecer el mensaje
Se establece el mensaje que se va a utilizar.

--- a/RhinoConsoleHelloWorld/packages/repositories.config
+++ b/RhinoConsoleHelloWorld/packages/repositories.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\ConsoleConsumer\packages.config" />
+  <repository path="..\ConsoleProductor\packages.config" />
   <repository path="..\RhinoConsoleHelloWorld\packages.config" />
+  <repository path="..\Utils\packages.config" />
 </repositories>
