Ajuste de funcionalidad
Se implementa completamente la funcinoalidad de envio de mensajes de un
lado a otro.

--- a/RhinoConsoleHelloWorld/ConsoleConsumer/App.config
+++ b/RhinoConsoleHelloWorld/ConsoleConsumer/App.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="rhino.esb" type="Rhino.ServiceBus.Config.BusConfigurationSection, Rhino.ServiceBus" />
+  </configSections>
+  <rhino.esb>
+    <bus threadCount="1" numberOfRetries="5" endpoint="msmq://localhost/pruebas.consola.consumidor" />
+    <messages />
+  </rhino.esb>
+  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
@@ -11,4 +19,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
 </configuration>
