--- a/RhinoConsoleHelloWorld/ConsoleConsumer/packages.config
+++ b/RhinoConsoleHelloWorld/ConsoleConsumer/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.1.0" targetFramework="net45" />
+  <package id="Castle.Windsor" version="3.1.0" targetFramework="net45" />
   <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
   <package id="Rhino.ServiceBus" version="3.0.0.0" targetFramework="net45" />
+  <package id="Rhino.ServiceBus.Castle" version="3.0.0.0" targetFramework="net45" />
+  <package id="Rhino.ServiceBus.References" version="3.0.0.0" targetFramework="net45" />
 </packages>
